# kb-eye

./: CMakeLists.txt
Unity/: InputHandler.cs  TmkAdapter.cs  UILayer.cs  WorldManager.cs
Unity/StreamingAssets/: config.json  exercises.json
gtm/: eye_normalizer.py  gaze_capture_service.py  gaze_demo.py  gaze_predictor.py  gaze_server.py  gaze_service.py  gaze_service.spec  head_pose_estimator.py  requirements.txt
include/: difficulty_adaptor.h  exercise_data.h  exercise_sequencer.h  json_server.h  tmk.h  types.h
src/: difficulty_adaptor.cpp  exercise_sequencer.cpp  json_server.cpp  main.cpp  tmk.cpp
